# VHACD

./: .gitignore  CHANGELOG.md  README.md  Third Party Notices.md
.github/workflows/: ccpp.yml
.yamato/: sonar.yml  yamato-config.yml
TestVhacd/: .gitignore
TestVhacd/ProjectSettings/: ProjectSettings.asset
com.spatial-construx.vhacd/: package.json
com.spatial-construx.vhacd/Runtime/: LICENSE.MD  MonoVHACD.cs  ScriptVHACD.cs
com.unity.robotics.vhacd/Runtime/: VHACD.cs  liblibvhacd.dylib
src/: CMakeLists.txt
src/dll/: CMakeLists.txt  VHACD.cs
src/dll/src/: dll.cpp
